correcting linux distribution